# BuzzPiPuck

./: .gitignore  README.md
scripts/: aggregation.bzz  barrier.bzz  dispersion.bzz  gradient.bzz  line.bzz  rotation.bzz  sync.bzz  test.bzz  testLEDsWithSleep.bzz  testSetOuterLEDs.bzz  testSetWheels.bzz  testVec2.bzz  testWhile.bzz  vec2.bzz
scripts/testScripts/: testGoto.bzz  testLEDsWithSleep.bzz  testSetWheels.bzz  testWhile.bzz
src/: CMakeLists.txt
src/buzz/: buzz_utility.c  buzz_utility.h  buzzpipuck_closures.c  buzzpipuck_closures.h  bzzpuck.c  fc_inav.cpp  fc_inav.h  pipuck_utility.c  pipuck_utility.h
src/buzz/include/src_puck/: PiPuck.h  i2c.h
src/buzz/src_puck/: PiPuck.c  i2c.c
src/cmake/: TargetKheperaIV.cmake
